--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon --watch * server.js"
+    "start": "PROD=true node server.js",
+    "dev": "nodemon --watch * server.js",
+    "postinstall": "cd ./my-app && npm install"
   },
   "author": "",
   "license": "ISC",
